--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: America/Santiago
 
 title: Hano # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Hackind your mind. # it will display as the subtitle
 
 description: >- #Apasionado de del Hacking# used by seo meta and the atom feed
   Hacking, programación, Musica
