--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: America/Santiago
 
 title: Hano # the main title
 
-tagline: Hackind your mind. # it will display as the subtitle
+tagline: Hacking your mind. # it will display as the subtitle
 
 description: >- #Apasionado de del Hacking# used by seo meta and the atom feed
   Hacking, programación, Musica
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAx6camOf_G96Zcs2Zj34Yjmy0ysPd-p0oJQ&s
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
